<resources>
    <string name="app_name">RandomNumber</string>
    <string name="generate">Generate</string>
    <string name="random_number_generator">Random Number Generator</string>
    <string name="min_value">Min Value</string>
    <string name="max_value">Max Value</string>
    <string name="invalid_input">Please enter valid numbers</string>
    <string name="min_max_error">Min value must be less than max value</string>
    <string name="calculator">Calculator</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="division_by_zero">Cannot divide by zero</string>
    <string name="result_format">Result: %s</string>
    <string name="switch_to_calculator">Switch to Calculator</string>
    <string name="switch_to_random">Switch to Random Number</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="android">Android</string>
    <string name="PHP">PHP</string>
    <string name="SQL">SQL</string>
    <string name="PYTHON">PYTHON</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="sign_in_form">Sign In Form</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Not account yet? Create one</string>
    <string name="or">Or</string>
    <string name="sign_in">SIGN IN</string>
    <string name="language_text">English</string>
    <string name="email_hint">Email or Phone</string>
    <string name="login">LOG IN</string>
    <string name="signup">Sign Up for Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change">Change</string>
    <string name="dot"> • </string>
    <string name="logo">logo</string>
    <string name="help">Help</string>
    <string name="sign_up_form">Sign Up Form</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="error_empty_field">This field cannot be empty</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_invalid_username">Username must be at least 3 characters</string>
    <string name="error_invalid_password">Password must be at least 6 characters</string>
</resources>